Step00_Hello index 주석 추가

--- a/Step00_Hello/WebContent/index.html
+++ b/Step00_Hello/WebContent/index.html
@@ -31,8 +31,12 @@
 <!-- 
 	*Memo*
 	
-	[현재 index 페이지의 웹페이지 경로]
-	http://localhost:8888/Hello/index.html
+	[현재 index 페이지의 웹페이지 경로 (분해)]
+	http://localhost:8888/Step00_Hello/index.html
+	
+	1. localhost:8888 - 특정 컴퓨터를 찾아가기
+	2. /Step00_Hello - context path 프로젝트를 찾아가기 위한 경로
+	3. /index.html - 순수 요청 경로
 	
 	상대 경로 : 현재 경로를 기준으로 이동하는 것 (헷갈릴 소지가 있다.)
 	절대 경로 : context path(프로젝트 명)을 이용해 절대적인 경로를 기준으로 이동하는 것
